fixed mobile overlay z-index too low

--- a/Client/styles/Mobile.module.scss
+++ b/Client/styles/Mobile.module.scss
@@ -14,7 +14,7 @@ $hamburgerSize: 60px;
 	position: fixed;
 	top: 0;
 	right: 0;
-	z-index: 1;
+	z-index: 900;
 	width: $navWidth;
 	height: 100%;
 	background: #e84875;
@@ -70,7 +70,7 @@ $hamburgerSize: 60px;
 	border-radius: 50%;
 	cursor: pointer;
 	position: fixed;
-	z-index: 10;
+	z-index: 991;
 	top: 5vh;
 	right: 5vw;
 	background: #e84875;
